# Robotics-and-ROS-2-Learn-by-Doing-Manipulators

./: .gitignore  README.md
Section3_Introduction_to_ROS_2/arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt
Section3_Introduction_to_ROS_2/arduinobot_ws/src/arduinobot_py_examples/: setup.py
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_cpp_examples/: package.xml
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_cpp_examples/src/: simple_parameter.cpp
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_description/: CMakeLists.txt  package.xml
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_description/launch/: display.launch.py  gazebo.launch.py
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_description/meshes/: link.STL
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_description/urdf/: arduinobot.urdf.xacro
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_py_examples/: package.xml  setup.py
Section4_Digital_Twin/arduinobot_ws/src/arduinobot_py_examples/arduinobot_py_examples/: simple_parameter.py
Section5_Control/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  package.xml
Section5_Control/arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt
Section5_Control/arduinobot_ws/src/arduinobot_description/: package.xml
Section5_Control/arduinobot_ws/src/arduinobot_py_examples/: package.xml
Section6_Kinematics/arduinobot_ws/src/arduinobot_controller/: package.xml
Section6_Kinematics/arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
Section6_Kinematics/arduinobot_ws/src/arduinobot_cpp_examples/src/: simple_parameter.cpp  simple_service_client.cpp  simple_subscriber.cpp
Section6_Kinematics/arduinobot_ws/src/arduinobot_description/: CMakeLists.txt
Section6_Kinematics/arduinobot_ws/src/arduinobot_msgs/: CMakeLists.txt
Section6_Kinematics/arduinobot_ws/src/arduinobot_py_examples/: package.xml  setup.py
Section6_Kinematics/arduinobot_ws/src/arduinobot_py_examples/arduinobot_py_examples/: simple_service_client.py  simple_service_server.py
Section6_Kinematics/arduinobot_ws/src/arduinobot_utils/: package.xml
Section7_Application/arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
Section7_Application/arduinobot_ws/src/arduinobot_description/: CMakeLists.txt  package.xml
Section7_Application/arduinobot_ws/src/arduinobot_moveit/: package.xml
Section7_Application/arduinobot_ws/src/arduinobot_msgs/: CMakeLists.txt  package.xml
Section7_Application/arduinobot_ws/src/arduinobot_py_examples/: package.xml
Section7_Application/arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt  package.xml
Section7_Application/arduinobot_ws/src/arduinobot_remote/arduinobot_remote/: alexa_interface.py  task_server.py
Section7_Application/arduinobot_ws/src/arduinobot_remote/launch/: remote_interface.launch.py
Section7_Application/arduinobot_ws/src/arduinobot_remote/src/: task_server.cpp
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_bringup/: package.xml
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_controller/arduinobot_controller/: slider_control.py
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_controller/launch/: controller.launch.py  slider_controller.launch.py
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_moveit/: CMakeLists.txt  package.xml
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_moveit/config/: joint_limits.yaml  pilz_cartesian_limits.yaml  planning_python_api.yaml
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_moveit/launch/: moveit.launch.py
Section8_Alexa_Integration/arduinobot_ws/src/arduinobot_py_examples/: setup.cfg  setup.py
Section8_Build/arduinobot_ws/src/arduinobot_cpp_examples/: package.xml
Section8_Build/arduinobot_ws/src/arduinobot_description/: package.xml
Section8_Build/arduinobot_ws/src/arduinobot_msgs/: package.xml
Section8_Build/arduinobot_ws/src/arduinobot_remote/: package.xml
Section9_Build/arduinobot_ws/src/arduinobot_bringup/: CMakeLists.txt  package.xml
Section9_Build/arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  arduinobot_controller.xml  package.xml
Section9_Build/arduinobot_ws/src/arduinobot_controller/include/arduinobot_controller/: arduinobot_interface.hpp
Section9_Build/arduinobot_ws/src/arduinobot_controller/launch/: controller.launch.py
Section9_Build/arduinobot_ws/src/arduinobot_controller/src/: arduinobot_interface.cpp  slider_control.cpp
Section9_Build/arduinobot_ws/src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
Section9_Build/arduinobot_ws/src/arduinobot_firmware/: CMakeLists.txt  package.xml
Section9_Build/arduinobot_ws/src/arduinobot_firmware/arduinobot_firmware/: simple_serial_receiver.py  simple_serial_transmitter.py
Section9_Build/arduinobot_ws/src/arduinobot_firmware/firmware/motor_calibration/: motor_calibration.ino
Section9_Build/arduinobot_ws/src/arduinobot_firmware/firmware/robot_control/: robot_control.ino
Section9_Build/arduinobot_ws/src/arduinobot_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
Section9_Build/arduinobot_ws/src/arduinobot_firmware/firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
Section9_Build/arduinobot_ws/src/arduinobot_firmware/firmware/simple_servo_control/: simple_servo_control.ino
Section9_Build/arduinobot_ws/src/arduinobot_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp
Section9_Build/arduinobot_ws/src/arduinobot_moveit/: package.xml
Section9_Build/arduinobot_ws/src/arduinobot_msgs/: CMakeLists.txt
Section9_Build/arduinobot_ws/src/arduinobot_py_examples/: setup.py
Section9_Build/arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt  package.xml
Section9_Build/arduinobot_ws/src/arduinobot_utils/: CMakeLists.txt  package.xml
Section9_Build/arduinobot_ws/src/arduinobot_utils/src/: angle_conversion.cpp
(+75 files in other folders)
