<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduinobot_cpp_examples</name>
  <version>0.0.0</version>
  <description>ROS 2 Code Examples</description>
  <maintainer email="antonio.brandi@outlook.it">Antonio Brandi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>arduinobot_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>moveit_ros_planning_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
