<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduinobot_utils</name>
  <version>0.0.0</version>
  <description>The arduinobot_utils package</description>
  <maintainer email="antonio.brandi@outlook.it">Antonio Brandi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>arduinobot_msgs</depend>
  <depend>tf2</depend>

  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
